Feature #160087102] Adds page title on reset password Changes welcome text on signin form

--- a/UI/signin.html
+++ b/UI/signin.html
@@ -40,7 +40,7 @@
 
                 <div class="white_box">
                     <img src="./images/avatar2.png" class="avatar">
-                    <h1>Glad, you would like to Join</h1>
+                    <h1>Welcome back!</h1>
                     <div class="user_dits">
 
                         <label>Email</label>
