[Feature #160087586] Adds user order food Styles user order food

--- a/UI/signup.html
+++ b/UI/signup.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" type="text/css" media="screen" href="css/signup.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="css/footer.css" />
 </head>
-<body class="signup">
+<body class="container">
         <header>
             <img src="./images/res.png">
 
