[Feature #160087855] Adds create food endpoint Adds create food link on booking page

--- a/UI/view_foods.html
+++ b/UI/view_foods.html
@@ -23,7 +23,9 @@
                 <a href="view_foods.html">
                     <li>FOOD</li>
                 </a>
-
+                <a href="add_food.html">
+                    <li>ADD FOOD</li>
+                </a>
                 <a href="signin.html">
                     <li>SIGN IN</li>
                 </a>
