Cenges required item to delete to id

--- a/UI/delete_food.html
+++ b/UI/delete_food.html
@@ -43,9 +43,9 @@
                         <h1>Delete Food Item</h1>
                         <div class="user_dits">
 
-                            <label>Title</label>
-                            <input type="text" name="title" required placeholder="Name of the Dish.">
-                        
+                            <label>Food ID:</label>
+                            <input type="number" size="6" name="food_id" required min="1" max="" value="0">
+    
                             <br>
                             <br>
                             <br>
