[Feature #160087939] Adds admin profile page links sdmin to add food page Links admin to edit food item page Links admin to delete food item page Links admin to view food list page gives admin ability to accept or decline an order give admin ability to mark an order as completed or not

--- a/UI/add_food.html
+++ b/UI/add_food.html
@@ -61,14 +61,22 @@
 
                         </div>
                     </div>
-        <!--Page footer-->
+                </div>
+            </form>
+        </section>
+
+        <!--page Footer-->
         <footer>
             <ul>
                 <li>
                     Contact US
                 </li>
-                <p>2018 &copy; Fast Food Fast</p>
+                <li>
+                    2018 &copy; Fast Foods
+                </li>
             </ul>
         </footer>
+        
+        
     </body>
 </html>
