--- a/UI/delete_food.html
+++ b/UI/delete_food.html
@@ -24,7 +24,7 @@
                 </a>
 
                 <a href="signin.html">
-                    <li>SIGN IN</li>
+                    <li>SIGN OUT</li>
                 </a>
             </ul>
 
@@ -53,7 +53,20 @@
                             
                         </div>
                     </div>
-        </section> 
+                </div>
+            </form>
+    </section>
+    <!--page Footer-->
+    <footer>
+        <ul>
+            <li>
+                Contact US
+            </li>
+            <li>
+                2018 &copy; Fast Foods
+            </li>
+        </ul>
+    </footer>   
     
 </body>
 </html>
