--- a/UI/edit_food.html
+++ b/UI/edit_food.html
@@ -61,15 +61,21 @@
                             
                         </div>
                     </div>
-                </section>          
-        <!--Page footer-->
+                </div>
+            </form>
+        </section>
+
+        <!--page Footer-->
         <footer>
             <ul>
                 <li>
                     Contact US
                 </li>
-                <p>2018 &copy; Fast Food Fast</p>
+                <li>
+                    2018 &copy; Fast Foods
+                </li>
             </ul>
         </footer>
+        
     </body>
 </html>
