--- a/UI/resetpass.html
+++ b/UI/resetpass.html
@@ -61,6 +61,18 @@
             </form>
     
         </section>
+
+        <!--page Footer-->
+        <footer>
+            <ul>
+                <li>
+                    Contact US
+                </li>
+                <li>
+                    2018 &copy; Fast Foods
+                </li>
+            </ul>
+        </footer>
     
 </body>
 </html>
