--- a/UI/signin.html
+++ b/UI/signin.html
@@ -73,14 +73,18 @@
         </form>
 
     </section>
-        <!--Page footer-->
-        <footer>
+        
+    <!--page Footer-->
+    <footer>
             <ul>
                 <li>
                     Contact US
                 </li>
-                <p>2018 &copy; Fast Food Fast</p>
+                <li>
+                    2018 &copy; Fast Foods
+                </li>
             </ul>
-        </footer>
+    </footer>
+        
     </body>
 </html>
