[Feature #160088014] Adds user profile page Shows hstory of past orders Shows history of current orders

--- a/UI/add_food.html
+++ b/UI/add_food.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" type="text/css" media="screen" href="css/signup.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="css/footer.css" />
 </head>
-<body class="container2">
+<body class="container3">
         <header>
             <img src="./images/res.png">
 
@@ -57,7 +57,7 @@
                             <br>
                             <br>
                             <br>
-                            <a class="button_create">Add Item</a>
+                            <a href="view_foods.html" class="button_create">Add Item</a>
 
                         </div>
                     </div>
