--- a/UI/admin_profile.html
+++ b/UI/admin_profile.html
@@ -86,8 +86,8 @@
                 <form method="POST">
                     <td>
                         <select>
-                            <option value="accept">ACCEPT</option>
-                            <option value="reject">REJECT</option>
+                            <option value="accept">ACCEPTED</option>
+                            <option value="reject">REJECTED</option>
                         </select>
                     </td>
                     <td>
@@ -111,8 +111,8 @@
                 <form method="POST">
                     <td>
                         <select>
-                            <option value="accept">ACCEPT</option>
-                            <option value="reject">REJECT</option>
+                            <option value="accept">ACCEPTED</option>
+                            <option value="reject">REJECTED</option>
                         </select>
                     </td>
                     <td>
@@ -136,8 +136,8 @@
                 <form method="POST">
                     <td>
                         <select>
-                            <option value="accept">ACCEPT</option>
-                            <option value="reject">REJECT</option>
+                            <option value="accept">ACCEPTED</option>
+                            <option value="reject">REJECTED</option>
                         </select>
                     </td>
                     <td>
@@ -161,8 +161,8 @@
                 <form method="POST">
                     <td>
                         <select>
-                            <option value="complete">ACCEPT</option>
-                            <option value="reject">REJECT</option>
+                            <option value="complete">ACCEPTED</option>
+                            <option value="reject">REJECTED</option>
                         </select>
                     </td>
                     <td>
@@ -177,7 +177,8 @@
                     </td>
                 </form> 
             </tr>
-        </table>        
+        </table>
+        </div>       
     </section>
 
     <!--page Footer-->
