--- a/UI/signin.html
+++ b/UI/signin.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" type="text/css" media="screen" href="css/signup.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="css/footer.css" />
 </head>
-<body class="container">
+<body class="container3">
     <header>
         <img src="./images/res.png">
 
@@ -53,7 +53,7 @@
                     </div>
                     <br>
                     <div id="button_page_center">
-                        <a href="view_foods.html" class="more_linkd">Sign In</a>
+                        <a href="user_profile.html" class="more_linkd">Sign In</a>
                         <br>
                         <br>
                         <br>
@@ -65,6 +65,7 @@
                     <div id="button_page_center">
                         <!--If not yet signed in-->
                         <a href="signup.html" class="more_link">Sign Up with Us?</a>
+                        <a href="admin_profile.html" class="more_link">ADM</a>
                     </div>
                 </div>
 
