--- a/UI/resetpass.html
+++ b/UI/resetpass.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" type="text/css" media="screen" href="css/signup.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="css/footer.css" />
 </head>
-<body class="container">
+<body class="container3">
     <header>
         <img src="./images/res.png">
 
