[Fix #160088014] Fixes responsive issues in the site Removes redundant elements

--- a/UI/delete_food.html
+++ b/UI/delete_food.html
@@ -2,12 +2,14 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Delete Item</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <title>Delete Food Item </title>
+    <meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1,user-scalable=no">
+    <meta name="HandheldFriendly" content="true">
     <link rel="stylesheet" type="text/css" media="screen" href="css/main.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="css/header.css" />
-    <link rel="stylesheet" type="text/css" media="screen" href="css/signup.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="css/profile.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="css/forms.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="css/footer.css" />
 </head>
 <body class="container3">
@@ -17,14 +19,14 @@
         <nav class="animate">
             <ul>
                 <a href="index.html">
-                    <li>HOME</li>
+                    HOME
                 </a>
                 <a href="view_foods.html">
-                    <li>FOOD</li>
+                    FOOD
                 </a>
 
                 <a href="signin.html">
-                    <li>SIGN OUT</li>
+                    SIGN OUT
                 </a>
             </ul>
 
