--- a/UI/resetpass.html
+++ b/UI/resetpass.html
@@ -1,14 +1,15 @@
  <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Reset Password</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="css/main.css" />
-    <link rel="stylesheet" type="text/css" media="screen" href="css/header.css" />
-    <link rel="stylesheet" type="text/css" media="screen" href="css/signup.css" />
-    <link rel="stylesheet" type="text/css" media="screen" href="css/footer.css" />
+        <meta charset="utf-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+        <title>Reset Password </title>
+        <meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1,user-scalable=no">
+        <meta name="HandheldFriendly" content="true">
+        <link rel="stylesheet" type="text/css" media="screen" href="css/main.css" />
+        <link rel="stylesheet" type="text/css" media="screen" href="css/header.css" />
+        <link rel="stylesheet" type="text/css" media="screen" href="css/forms.css" />
+        <link rel="stylesheet" type="text/css" media="screen" href="css/footer.css" />
 </head>
 <body class="container3">
     <header>
@@ -17,14 +18,14 @@
         <nav class="animate">
             <ul>
                 <a href="index.html">
-                    <li>HOME</li>
+                    HOME
                 </a>
                 <a href="view_foods.html">
-                    <li>FOOD</li>
+                    FOOD
                 </a>
 
                 <a href="signin.html">
-                    <li>SIGN IN</li>
+                    SIGN OUT
                 </a>
             </ul>
 
@@ -33,7 +34,7 @@
             </ul>
         </nav>
     </header>
-    <section class="signup">
+    <section class="all_content">
 
             <form class="form_content" action="" method="POST">
                 <div class="register">
