--- a/UI/view_foods.html
+++ b/UI/view_foods.html
@@ -2,29 +2,31 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title>Foods</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1,user-scalable=no">
+    <meta name="HandheldFriendly" content="true">
     <link rel="stylesheet" type="text/css" media="screen" href="css/main.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="css/header.css" />
-    <link rel="stylesheet" type="text/css" media="screen" href="css/signup.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="css/forms.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="css/profile.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="css/food_table.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="css/footer.css" />
 </head>
-<body class="container2">
+<body class="container3">
     <header>
         <img src="./images/res.png">
 
         <nav class="animate">
             <ul>
                 <a href="index.html">
-                    <li>HOME</li>
+                    HOME
                 </a>
                 <a href="view_foods.html">
-                    <li>FOOD</li>
+                    FOOD
                 </a>
                 <a href="signin.html">
-                    <li>SIGN OUT</li>
+                    SIGN OUT
                 </a>
             </ul>
         </nav>
