[Fix #160088014] Adds slogan

--- a/UI/index.html
+++ b/UI/index.html
@@ -17,8 +17,11 @@
             <p>
                 Welcome!
                 <br>
-                <br>Fast Food Fast is a food delivery service app for a restaurant.
+                Fast Food Fast is better just like Mom’s house
+                <br>
+                <br>We are a food delivery service app for a restaurant.
                 <br> 
+                
                 You can explore by :
                 <br>
                 <br>
