--- a/API_V1/tests/cover/resources_user_auth_py.html
+++ b/API_V1/tests/cover/resources_user_auth_py.html
@@ -30,8 +30,8 @@
         <img id="keyboard_icon" src="keybd_closed.png" alt="Show keyboard shortcuts" />
 
         <h2 class="stats">
-            16 statements &nbsp;
-            <span class="run hide_run shortkey_r button_toggle_run">16 run</span>
+            25 statements &nbsp;
+            <span class="run hide_run shortkey_r button_toggle_run">25 run</span>
             <span class="mis shortkey_m button_toggle_mis">0 missing</span>
             <span class="exc shortkey_x button_toggle_exc">0 excluded</span>
 
@@ -90,22 +90,48 @@
 <p id="n21" class="pln"><a href="#n21">21</a></p>
 <p id="n22" class="pln"><a href="#n22">22</a></p>
 <p id="n23" class="pln"><a href="#n23">23</a></p>
-<p id="n24" class="stm run hide_run"><a href="#n24">24</a></p>
-<p id="n25" class="pln"><a href="#n25">25</a></p>
+<p id="n24" class="pln"><a href="#n24">24</a></p>
+<p id="n25" class="stm run hide_run"><a href="#n25">25</a></p>
 <p id="n26" class="pln"><a href="#n26">26</a></p>
 <p id="n27" class="pln"><a href="#n27">27</a></p>
 <p id="n28" class="pln"><a href="#n28">28</a></p>
-<p id="n29" class="stm run hide_run"><a href="#n29">29</a></p>
-<p id="n30" class="stm run hide_run"><a href="#n30">30</a></p>
-<p id="n31" class="stm run hide_run"><a href="#n31">31</a></p>
-<p id="n32" class="stm run hide_run"><a href="#n32">32</a></p>
+<p id="n29" class="pln"><a href="#n29">29</a></p>
+<p id="n30" class="pln"><a href="#n30">30</a></p>
+<p id="n31" class="pln"><a href="#n31">31</a></p>
+<p id="n32" class="pln"><a href="#n32">32</a></p>
 <p id="n33" class="pln"><a href="#n33">33</a></p>
 <p id="n34" class="stm run hide_run"><a href="#n34">34</a></p>
-<p id="n35" class="stm run hide_run"><a href="#n35">35</a></p>
-<p id="n36" class="stm run hide_run"><a href="#n36">36</a></p>
+<p id="n35" class="pln"><a href="#n35">35</a></p>
+<p id="n36" class="pln"><a href="#n36">36</a></p>
 <p id="n37" class="pln"><a href="#n37">37</a></p>
-<p id="n38" class="stm run hide_run"><a href="#n38">38</a></p>
-<p id="n39" class="pln"><a href="#n39">39</a></p>
+<p id="n38" class="pln"><a href="#n38">38</a></p>
+<p id="n39" class="stm run hide_run"><a href="#n39">39</a></p>
+<p id="n40" class="stm run hide_run"><a href="#n40">40</a></p>
+<p id="n41" class="stm run hide_run"><a href="#n41">41</a></p>
+<p id="n42" class="stm run hide_run"><a href="#n42">42</a></p>
+<p id="n43" class="pln"><a href="#n43">43</a></p>
+<p id="n44" class="stm run hide_run"><a href="#n44">44</a></p>
+<p id="n45" class="stm run hide_run"><a href="#n45">45</a></p>
+<p id="n46" class="stm run hide_run"><a href="#n46">46</a></p>
+<p id="n47" class="pln"><a href="#n47">47</a></p>
+<p id="n48" class="stm run hide_run"><a href="#n48">48</a></p>
+<p id="n49" class="pln"><a href="#n49">49</a></p>
+<p id="n50" class="pln"><a href="#n50">50</a></p>
+<p id="n51" class="pln"><a href="#n51">51</a></p>
+<p id="n52" class="pln"><a href="#n52">52</a></p>
+<p id="n53" class="pln"><a href="#n53">53</a></p>
+<p id="n54" class="stm run hide_run"><a href="#n54">54</a></p>
+<p id="n55" class="stm run hide_run"><a href="#n55">55</a></p>
+<p id="n56" class="stm run hide_run"><a href="#n56">56</a></p>
+<p id="n57" class="stm run hide_run"><a href="#n57">57</a></p>
+<p id="n58" class="pln"><a href="#n58">58</a></p>
+<p id="n59" class="stm run hide_run"><a href="#n59">59</a></p>
+<p id="n60" class="stm run hide_run"><a href="#n60">60</a></p>
+<p id="n61" class="stm run hide_run"><a href="#n61">61</a></p>
+<p id="n62" class="pln"><a href="#n62">62</a></p>
+<p id="n63" class="pln"><a href="#n63">63</a></p>
+<p id="n64" class="pln"><a href="#n64">64</a></p>
+<p id="n65" class="stm run hide_run"><a href="#n65">65</a></p>
 
             </td>
             <td class="text">
@@ -129,25 +155,51 @@
 <p id="t18" class="pln">    <span class="str">'confirm_password'</span><span class="op">:</span><span class="nam">fields</span><span class="op">.</span><span class="nam">String</span><span class="op">(</span><span class="nam">required</span><span class="op">=</span><span class="key">True</span><span class="op">,</span> <span class="nam">description</span><span class="op">=</span><span class="str">'Confirm your password'</span><span class="op">)</span><span class="op">,</span><span class="strut">&nbsp;</span></p>
 <p id="t19" class="pln"><span class="op">}</span><span class="op">)</span><span class="strut">&nbsp;</span></p>
 <p id="t20" class="pln"><span class="strut">&nbsp;</span></p>
-<p id="t21" class="pln"><span class="str">"""</span><span class="strut">&nbsp;</span></p>
-<p id="t22" class="pln"><span class="str">    create an instance of class ManageUsersDAO</span><span class="strut">&nbsp;</span></p>
-<p id="t23" class="pln"><span class="str">"""</span><span class="strut">&nbsp;</span></p>
-<p id="t24" class="stm run hide_run"><span class="nam">UserAO</span><span class="op">=</span><span class="nam">ManageUsersDAO</span><span class="op">(</span><span class="op">)</span><span class="strut">&nbsp;</span></p>
-<p id="t25" class="pln"><span class="strut">&nbsp;</span></p>
-<p id="t26" class="pln"><span class="str">"""</span><span class="strut">&nbsp;</span></p>
-<p id="t27" class="pln"><span class="str">    User signup enpoint</span><span class="strut">&nbsp;</span></p>
-<p id="t28" class="pln"><span class="str">"""</span><span class="strut">&nbsp;</span></p>
-<p id="t29" class="stm run hide_run"><span class="op">@</span><span class="nam">ns</span><span class="op">.</span><span class="nam">route</span><span class="op">(</span><span class="str">'/signup'</span><span class="op">)</span><span class="strut">&nbsp;</span></p>
-<p id="t30" class="stm run hide_run"><span class="op">@</span><span class="nam">ns</span><span class="op">.</span><span class="nam">response</span><span class="op">(</span><span class="num">409</span><span class="op">,</span> <span class="str">'Email Conflict'</span><span class="op">)</span><span class="strut">&nbsp;</span></p>
-<p id="t31" class="stm run hide_run"><span class="op">@</span><span class="nam">ns</span><span class="op">.</span><span class="nam">response</span><span class="op">(</span><span class="num">400</span><span class="op">,</span> <span class="str">'Incorrect Input'</span><span class="op">)</span><span class="strut">&nbsp;</span></p>
-<p id="t32" class="stm run hide_run"><span class="key">class</span> <span class="nam">SignUp</span><span class="op">(</span><span class="nam">Resource</span><span class="op">)</span><span class="op">:</span><span class="strut">&nbsp;</span></p>
-<p id="t33" class="pln">    <span class="str">'''Allows a user to sign up'''</span><span class="strut">&nbsp;</span></p>
-<p id="t34" class="stm run hide_run">    <span class="op">@</span><span class="nam">ns</span><span class="op">.</span><span class="nam">doc</span><span class="op">(</span><span class="str">'New user signup'</span><span class="op">)</span><span class="strut">&nbsp;</span></p>
-<p id="t35" class="stm run hide_run">    <span class="op">@</span><span class="nam">ns</span><span class="op">.</span><span class="nam">expect</span><span class="op">(</span><span class="nam">user_signup</span><span class="op">)</span><span class="strut">&nbsp;</span></p>
-<p id="t36" class="stm run hide_run">    <span class="op">@</span><span class="nam">ns</span><span class="op">.</span><span class="nam">response</span><span class="op">(</span><span class="num">201</span><span class="op">,</span> <span class="str">'Account created'</span><span class="op">)</span><span class="strut">&nbsp;</span></p>
-<p id="t37" class="pln">    <span class="key">def</span> <span class="nam">post</span><span class="op">(</span><span class="nam">self</span><span class="op">)</span><span class="op">:</span><span class="strut">&nbsp;</span></p>
-<p id="t38" class="stm run hide_run">        <span class="key">return</span> <span class="nam">UserAO</span><span class="op">.</span><span class="nam">add_user_details</span><span class="op">(</span><span class="nam">api</span><span class="op">.</span><span class="nam">payload</span><span class="op">)</span><span class="strut">&nbsp;</span></p>
-<p id="t39" class="pln"><span class="strut">&nbsp;</span></p>
+<p id="t21" class="pln"><span class="strut">&nbsp;</span></p>
+<p id="t22" class="pln"><span class="str">""" </span><span class="strut">&nbsp;</span></p>
+<p id="t23" class="pln"><span class="str">    Model for signin data to be entered by user</span><span class="strut">&nbsp;</span></p>
+<p id="t24" class="pln"><span class="str">"""</span><span class="strut">&nbsp;</span></p>
+<p id="t25" class="stm run hide_run"><span class="nam">user_signin</span> <span class="op">=</span> <span class="nam">api</span><span class="op">.</span><span class="nam">model</span><span class="op">(</span><span class="str">'Sign in'</span><span class="op">,</span> <span class="op">{</span><span class="strut">&nbsp;</span></p>
+<p id="t26" class="pln">    <span class="str">'email'</span><span class="op">:</span> <span class="nam">fields</span><span class="op">.</span><span class="nam">String</span><span class="op">(</span><span class="nam">required</span><span class="op">=</span><span class="key">True</span><span class="op">,</span> <span class="nam">description</span><span class="op">=</span><span class="str">'Your Email'</span><span class="op">)</span><span class="op">,</span><span class="strut">&nbsp;</span></p>
+<p id="t27" class="pln">    <span class="str">'password'</span><span class="op">:</span> <span class="nam">fields</span><span class="op">.</span><span class="nam">String</span><span class="op">(</span><span class="nam">required</span><span class="op">=</span><span class="key">True</span><span class="op">,</span> <span class="nam">description</span><span class="op">=</span><span class="str">'Your password'</span><span class="op">)</span><span class="strut">&nbsp;</span></p>
+<p id="t28" class="pln"><span class="op">}</span><span class="op">)</span><span class="strut">&nbsp;</span></p>
+<p id="t29" class="pln"><span class="strut">&nbsp;</span></p>
+<p id="t30" class="pln"><span class="strut">&nbsp;</span></p>
+<p id="t31" class="pln"><span class="str">"""</span><span class="strut">&nbsp;</span></p>
+<p id="t32" class="pln"><span class="str">    create an instance of class ManageUsersDAO</span><span class="strut">&nbsp;</span></p>
+<p id="t33" class="pln"><span class="str">"""</span><span class="strut">&nbsp;</span></p>
+<p id="t34" class="stm run hide_run"><span class="nam">UserAO</span><span class="op">=</span><span class="nam">ManageUsersDAO</span><span class="op">(</span><span class="op">)</span><span class="strut">&nbsp;</span></p>
+<p id="t35" class="pln"><span class="strut">&nbsp;</span></p>
+<p id="t36" class="pln"><span class="str">"""</span><span class="strut">&nbsp;</span></p>
+<p id="t37" class="pln"><span class="str">    User signup enpoint</span><span class="strut">&nbsp;</span></p>
+<p id="t38" class="pln"><span class="str">"""</span><span class="strut">&nbsp;</span></p>
+<p id="t39" class="stm run hide_run"><span class="op">@</span><span class="nam">ns</span><span class="op">.</span><span class="nam">route</span><span class="op">(</span><span class="str">'/signup'</span><span class="op">)</span><span class="strut">&nbsp;</span></p>
+<p id="t40" class="stm run hide_run"><span class="op">@</span><span class="nam">ns</span><span class="op">.</span><span class="nam">response</span><span class="op">(</span><span class="num">409</span><span class="op">,</span> <span class="str">'Email Conflict'</span><span class="op">)</span><span class="strut">&nbsp;</span></p>
+<p id="t41" class="stm run hide_run"><span class="op">@</span><span class="nam">ns</span><span class="op">.</span><span class="nam">response</span><span class="op">(</span><span class="num">400</span><span class="op">,</span> <span class="str">'Incorrect Input'</span><span class="op">)</span><span class="strut">&nbsp;</span></p>
+<p id="t42" class="stm run hide_run"><span class="key">class</span> <span class="nam">SignUp</span><span class="op">(</span><span class="nam">Resource</span><span class="op">)</span><span class="op">:</span><span class="strut">&nbsp;</span></p>
+<p id="t43" class="pln">    <span class="str">'''Allows a user to sign up'''</span><span class="strut">&nbsp;</span></p>
+<p id="t44" class="stm run hide_run">    <span class="op">@</span><span class="nam">ns</span><span class="op">.</span><span class="nam">doc</span><span class="op">(</span><span class="str">'New user signup'</span><span class="op">)</span><span class="strut">&nbsp;</span></p>
+<p id="t45" class="stm run hide_run">    <span class="op">@</span><span class="nam">ns</span><span class="op">.</span><span class="nam">expect</span><span class="op">(</span><span class="nam">user_signup</span><span class="op">)</span><span class="strut">&nbsp;</span></p>
+<p id="t46" class="stm run hide_run">    <span class="op">@</span><span class="nam">ns</span><span class="op">.</span><span class="nam">response</span><span class="op">(</span><span class="num">201</span><span class="op">,</span> <span class="str">'Account created'</span><span class="op">)</span><span class="strut">&nbsp;</span></p>
+<p id="t47" class="pln">    <span class="key">def</span> <span class="nam">post</span><span class="op">(</span><span class="nam">self</span><span class="op">)</span><span class="op">:</span><span class="strut">&nbsp;</span></p>
+<p id="t48" class="stm run hide_run">        <span class="key">return</span> <span class="nam">UserAO</span><span class="op">.</span><span class="nam">add_user_details</span><span class="op">(</span><span class="nam">api</span><span class="op">.</span><span class="nam">payload</span><span class="op">)</span><span class="strut">&nbsp;</span></p>
+<p id="t49" class="pln"><span class="strut">&nbsp;</span></p>
+<p id="t50" class="pln"><span class="strut">&nbsp;</span></p>
+<p id="t51" class="pln"><span class="str">"""</span><span class="strut">&nbsp;</span></p>
+<p id="t52" class="pln"><span class="str">    User signin endpoint</span><span class="strut">&nbsp;</span></p>
+<p id="t53" class="pln"><span class="str">"""</span><span class="strut">&nbsp;</span></p>
+<p id="t54" class="stm run hide_run"><span class="op">@</span><span class="nam">ns</span><span class="op">.</span><span class="nam">route</span><span class="op">(</span><span class="str">'/signin'</span><span class="op">)</span><span class="strut">&nbsp;</span></p>
+<p id="t55" class="stm run hide_run"><span class="op">@</span><span class="nam">ns</span><span class="op">.</span><span class="nam">response</span><span class="op">(</span><span class="num">403</span><span class="op">,</span> <span class="str">'Email unknown'</span><span class="op">)</span><span class="strut">&nbsp;</span></p>
+<p id="t56" class="stm run hide_run"><span class="op">@</span><span class="nam">ns</span><span class="op">.</span><span class="nam">response</span><span class="op">(</span><span class="num">409</span><span class="op">,</span> <span class="str">'User already signed in'</span><span class="op">)</span><span class="strut">&nbsp;</span></p>
+<p id="t57" class="stm run hide_run"><span class="key">class</span> <span class="nam">Signin</span><span class="op">(</span><span class="nam">Resource</span><span class="op">)</span><span class="op">:</span><span class="strut">&nbsp;</span></p>
+<p id="t58" class="pln">    <span class="str">'''Allows a user to sign in'''</span><span class="strut">&nbsp;</span></p>
+<p id="t59" class="stm run hide_run">    <span class="op">@</span><span class="nam">ns</span><span class="op">.</span><span class="nam">doc</span><span class="op">(</span><span class="str">'Signed Up  user Sign In'</span><span class="op">)</span><span class="strut">&nbsp;</span></p>
+<p id="t60" class="stm run hide_run">    <span class="op">@</span><span class="nam">ns</span><span class="op">.</span><span class="nam">expect</span><span class="op">(</span><span class="nam">user_signin</span><span class="op">)</span><span class="strut">&nbsp;</span></p>
+<p id="t61" class="stm run hide_run">    <span class="op">@</span><span class="nam">ns</span><span class="op">.</span><span class="nam">response</span><span class="op">(</span><span class="num">200</span><span class="op">,</span><span class="str">'Sign In successful'</span><span class="op">)</span><span class="strut">&nbsp;</span></p>
+<p id="t62" class="pln">    <span class="key">def</span> <span class="nam">post</span><span class="op">(</span><span class="nam">self</span><span class="op">)</span><span class="op">:</span><span class="strut">&nbsp;</span></p>
+<p id="t63" class="pln">        <span class="str">'''Sign In User'''</span><span class="strut">&nbsp;</span></p>
+<p id="t64" class="pln"><span class="strut">&nbsp;</span></p>
+<p id="t65" class="stm run hide_run">        <span class="key">return</span> <span class="nam">UserAO</span><span class="op">.</span><span class="nam">user_signin</span><span class="op">(</span><span class="nam">api</span><span class="op">.</span><span class="nam">payload</span><span class="op">)</span><span class="strut">&nbsp;</span></p>
 
             </td>
         </tr>
@@ -158,7 +210,7 @@
     <div class="content">
         <p>
             <a class="nav" href="index.html">&#xab; index</a> &nbsp; &nbsp; <a class="nav" href="https://coverage.readthedocs.io">coverage.py v4.5.1</a>,
-            created at 2018-09-03 15:58
+            created at 2018-09-03 17:45
         </p>
     </div>
 </div>
