--- a/UI/index.html
+++ b/UI/index.html
@@ -8,7 +8,7 @@
     <meta name="HandheldFriendly" content="true">
     <link rel="stylesheet" type="text/css" media="screen" href="css/main.css" />
 </head>
-<body style="overflow:hidden;">
+<body>
     <div id="catcher">
         <img class="home_image" src="images/top-wallpapers-i-hd-images-part-2.jpg">
 
