--- a/UI/signin.html
+++ b/UI/signin.html
@@ -44,16 +44,17 @@
                     <div class="user_dits">
 
                         <label>Email</label>
-                        <input type="email" name="email" required placeholder="Enter your email Address">
+                        <input id="email" type="email" name="email" required placeholder="Enter your email Address">
 
 
                         <label>Password</label>
-                        <input type="password" name="password" required placeholder="Enter your password">
+                        <input id='psswd' type="password" name="password" required placeholder="Enter your password">
 
                     </div>
                     <br>
                     <div id="button_page_center">
-                        <a href="user_profile.html" class="more_linkd">Sign In</a>
+                        <button class="signup" type="submit">Sign In</button>
+                        <!-- <a href="user_profile.html" class="more_linkd">Sign In</a> -->
                         <br>
                         <br>
                         <br>
@@ -65,7 +66,7 @@
                     <div id="button_page_center">
                         <!--If not yet signed in-->
                         <a href="signup.html" class="more_link">Sign Up with Us?</a>
-                        <a href="admin_profile.html" class="more_link">ADM</a>
+                        <!-- <a href="admin_profile.html" class="more_link">ADM</a> -->
                     </div>
                 </div>
 
@@ -86,6 +87,6 @@
                 </li>
             </ul>
     </footer>
-        
+    <script src="js/auth.js" ></script>
     </body>
 </html>
