--- a/UI/view_foods.html
+++ b/UI/view_foods.html
@@ -39,6 +39,8 @@
                 <th>Description</th>
                 <th>Price</th>
                 <th>Type</th>
+                <th>Quantity</th>
+                <th>Action</th>
             </tr>
             <tbody id="tbody">
 
