--- a/UI/admin_profile.html
+++ b/UI/admin_profile.html
@@ -60,7 +60,7 @@
                     <p>
                         <a href="add_food.html" class="button_create">Add Food</a>
                         <a href="edit_food.html" class="button_create">Edit Food</a>
-                        <a href="delete_food.html" class="button_create">Delete Food</a>
+                        <!-- <a href="delete_food.html" class="button_create">Delete Food</a> -->
                         <a href="view_foods.html" class="button_create">View Food List</a>
                     </p>
                     
@@ -77,7 +77,9 @@
                 <th>Quantity</th>
                 <th>Total</th>
                 <th>Status</th>
-                <th>User</th>                   
+                <th>User</th>  
+                <th>Action</th>
+                <th>Send</th>                  
             </tr>
             <tbody id="tbody">
 
