[Chore #161203653] Link up the templates

--- a/UI/user_profile.html
+++ b/UI/user_profile.html
@@ -25,6 +25,9 @@
                 <a href="view_foods.html">
                     FOOD
                 </a>
+                <a href="admin_profile.html">
+                    ADM
+                </a>
 
                 <a href="signin.html">
                     SIGN OUT
