--- a/UI/signin.html
+++ b/UI/signin.html
@@ -53,7 +53,7 @@
                     </div>
                     <br>
                     <div id="button_page_center">
-                        <button class="signup" type="submit">Sign In</button>
+                        <button class="signin" type="submit">Sign In</button>
                         <!-- <a href="user_profile.html" class="more_linkd">Sign In</a> -->
                         <br>
                         <br>
@@ -87,6 +87,6 @@
                 </li>
             </ul>
     </footer>
-    <script src="js/auth.js" ></script>
+    <script src="js/auth_login.js" ></script>
     </body>
 </html>
