--- a/UI/signup.html
+++ b/UI/signup.html
@@ -84,6 +84,6 @@
                 </li>
             </ul>
         </footer>
-        <script src="js/auth.js" ></script>
+        <script src="js/auth_signup.js" ></script>
     </body>
 </html>
