--- a/UI/view_foods.html
+++ b/UI/view_foods.html
@@ -25,6 +25,9 @@
                 <a href="view_foods.html">
                     FOOD
                 </a>
+                <a href="user_profile.html">
+                    PROFILE
+                </a>
                 <a href="signin.html">
                     SIGN OUT
                 </a>
