[Feature #161360437] Admin edit food menu item

--- a/UI/admin_profile.html
+++ b/UI/admin_profile.html
@@ -59,7 +59,7 @@
                     
                     <p>
                         <a href="add_food.html" class="button_create">Add Food</a>
-                        <a href="edit_food.html" class="button_create">Edit Food</a>
+                        <a href="manipulate_menu.html" class="button_create">Edit Menu</a>
                         <!-- <a href="delete_food.html" class="button_create">Delete Food</a> -->
                         <a href="view_foods.html" class="button_create">View Food List</a>
                     </p>
