[Fix #161360437] Fix edit food food title

--- a/UI/edit_food.html
+++ b/UI/edit_food.html
@@ -41,7 +41,7 @@
                 <div class="register">
                     
                     <div class="white_box">
-                        <h1>Create a food item</h1>
+                        <h1>Edit item</h1>
                         <div class="user_dits">
 
                             <label>Title</label>
