[Feature #161362280] Admin delete food item

--- a/UI/manipulate_menu.html
+++ b/UI/manipulate_menu.html
@@ -3,7 +3,7 @@
 <head>
         <meta charset="utf-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>Edit Food Item </title>
+        <title>Edit Food Menu </title>
         <meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1,user-scalable=no">
         <meta name="HandheldFriendly" content="true">
         <link rel="stylesheet" type="text/css" media="screen" href="css/main.css" />
@@ -45,7 +45,8 @@
                     <th>Description</th>
                     <th>Price</th>
                     <th>Type</th>
-                    <th>Edit</th>            
+                    <th>Edit</th>
+                    <th>Delete</th>            
                 </tr>
                 <tbody id="tbody">
     
