[Feature #161363372] Add user signup tests Add user login test Add user add menu item test

--- a/UI/signin.html
+++ b/UI/signin.html
@@ -65,7 +65,7 @@
                     <br>
                     <div id="button_page_center">
                         <!--If not yet signed in-->
-                        <a href="signup.html" class="more_link">Sign Up with Us?</a>
+                        <a href="signup.html" class="more_link signup">Sign Up with Us?</a>
                         <!-- <a href="admin_profile.html" class="more_link">ADM</a> -->
                     </div>
                 </div>
