[Fix #161363372] Edit how input errors appear in the application

--- a/UI/view_foods.html
+++ b/UI/view_foods.html
@@ -35,6 +35,7 @@
         </nav>
     </header>
     <section class="all_content" >
+        <div id="message_error1"></div>
         <table>
             <tr>
                 <th>Id</th>
