--- a/UI/add_food.html
+++ b/UI/add_food.html
@@ -43,7 +43,8 @@
                     <div class="white_box">
                         <h1>Create a food item</h1>
                         <div class="user_dits">
-
+                            <div id="message_error"></div>
+                            
                             <label>Title</label>
                             <input id='title' type="text" name="title" required placeholder="Name your dish.">
                         
