--- a/UI/edit_food.html
+++ b/UI/edit_food.html
@@ -43,6 +43,7 @@
                     <div class="white_box">
                         <h1>Edit item</h1>
                         <div class="user_dits">
+                            <div id="message_error"></div>
 
                             <label>Title</label>
                             <input id='title' type="text" name="title" required placeholder="Name your dish.">
