--- a/UI/manipulate_menu.html
+++ b/UI/manipulate_menu.html
@@ -36,7 +36,7 @@
             </nav>
         </header>
         <section class="all_content">
-    
+            <div id="message_error1"></div>
             <table>
                 <h2 id='titling'>Our Menu</h2>
                 <tr>
