--- a/UI/signin.html
+++ b/UI/signin.html
@@ -42,6 +42,7 @@
                     <img src="./images/avatar2.png" class="avatar">
                     <h1>Welcome back!</h1>
                     <div class="user_dits">
+                        <div id="message_error"></div>
 
                         <label>Email</label>
                         <input id="email" type="email" name="email" required placeholder="Enter your email Address">
