--- a/UI/signup.html
+++ b/UI/signup.html
@@ -44,6 +44,7 @@
                         <img src="./images/avatar2.png" class="avatar">
                         <h1>Glad, you would like to Join</h1>
                         <div class="user_dits">
+                            <div id="message_error"></div>
     
                             <label>Email</label>
                             <input id="email" type="email" name="email" required placeholder="Enter your email Address">
