[Fix #161363372] Rename js variables

--- a/UI/add_food.html
+++ b/UI/add_food.html
@@ -25,7 +25,7 @@
                         FOOD
                     </a>
 
-                    <a href="signin.html">
+                    <a id="leave">
                         SIGN OUT
                     </a>
                 </ul>
@@ -81,5 +81,6 @@
         </footer>
         
     <script src="js/food.js"></script>
+    <script src="js/auth_logout.js"></script>
     </body>
 </html>
