--- a/UI/edit_food.html
+++ b/UI/edit_food.html
@@ -25,7 +25,7 @@
                         FOOD
                     </a>
 
-                    <a href="signin.html">
+                    <a id="leave">
                         SIGN OUT
                     </a>
                 </ul>
@@ -80,5 +80,6 @@
             </ul>
         </footer>
     <script src="js/manip_menu.js"></script>
+    <script src="js/auth_logout.js"></script>
     </body>
 </html>
