--- a/UI/user_profile.html
+++ b/UI/user_profile.html
@@ -25,11 +25,7 @@
                 <a href="view_foods.html">
                     FOOD
                 </a>
-                <a id="admin" href="admin_profile.html">
-                    ADM
-                </a>
-
-                <a id="signout" href="signin.html">
+                <a id="leave">
                     SIGN OUT
                 </a>
             </ul>
@@ -97,5 +93,6 @@
         </ul>
     </footer>
     <script src="js/user_profiler.js"></script>
+    <script src="js/auth_logout.js"></script>
 </body>
 </html>
