--- a/UI/view_foods.html
+++ b/UI/view_foods.html
@@ -28,7 +28,7 @@
                 <a href="user_profile.html">
                     PROFILE
                 </a>
-                <a href="signin.html">
+                <a id="leave">
                     SIGN OUT
                 </a>
             </ul>
@@ -65,5 +65,6 @@
         </footer>
         
     <script src="js/fetcher.js"></script>
+    <script src="js/auth_logout.js"></script>
 </body>
 </html>
