--- a/UI/admin_profile.html
+++ b/UI/admin_profile.html
@@ -26,7 +26,7 @@
                     FOOD
                 </a>
 
-                <a id="signout" href="signin.html">
+                <a id="leave">
                     SIGN OUT
                 </a>
             </ul>
@@ -100,5 +100,6 @@
         </ul>
     </footer>
     <script src="js/admin_profiler.js"></script>
+    <script src="js/auth_logout.js"></script>
 </body>
 </html>
