Fix #161363372] Add search to food menu Add images to the food item menu

--- a/UI/add_food.html
+++ b/UI/add_food.html
@@ -44,6 +44,8 @@
                         <h1>Create a food item</h1>
                         <div class="user_dits">
                             <div id="message_error"></div>
+                            <label>Enter image link </label>
+                            <input id='itemImage' type="text" required placeholder="http://pizza.jpg">
                             
                             <label>Title</label>
                             <input id='title' type="text" name="title" required placeholder="Name your dish.">
