--- a/UI/edit_food.html
+++ b/UI/edit_food.html
@@ -44,7 +44,9 @@
                         <h1>Edit item</h1>
                         <div class="user_dits">
                             <div id="message_error"></div>
-
+                            <label>Enter image link </label>
+                            <input id='itemImage' type="text" required placeholder="http://pizza.jpg">
+                            
                             <label>Title</label>
                             <input id='title' type="text" name="title" required placeholder="Name your dish.">
                         
