--- a/UI/manipulate_menu.html
+++ b/UI/manipulate_menu.html
@@ -41,6 +41,7 @@
                 <h2 id='titling'>Our Menu</h2>
                 <tr>
                     <th>Id</th>
+                    <th>Picture</th>
                     <th>Title</th>
                     <th>Description</th>
                     <th>Price</th>
