--- a/UI/view_foods.html
+++ b/UI/view_foods.html
@@ -36,9 +36,11 @@
     </header>
     <section class="all_content" >
         <div id="message_error1"></div>
+        <input type="text" id="menuSearch" placeholder="Looking for ...." onkeyup="quickSearch()">
         <table>
             <tr>
                 <th>Id</th>
+                <th>Picture</th>
                 <th>Title</th>
                 <th>Description</th>
                 <th>Price</th>
@@ -49,7 +51,12 @@
             <tbody id="tbody">
 
             </tbody>
-        </table>    
+        </table>
+        <div id=paginater>
+            <a href="" class="button_info">Previous</a>
+            <a href="" class="button_info">Current </a>
+            <a href="" class="button_info">Next</a>
+        </div>
     </section>
 
     <!--page Footer-->
